# codest-api/src/main/kotlin/r3nny/codest/api/dto/common/TaskWithSolutionsDto.kt
@@ -1,6 +1,5 @@
 package r3nny.codest.api.dto.common
 
-import r3nny.codest.api.TasksApiResponses
 import r3nny.codest.api.dto.dao.AttemptByTaskDto
 import r3nny.codest.model.Level
 import r3nny.codest.model.SolutionLiteResponse
@@ -8,25 +7,24 @@ import r3nny.codest.model.TaskLiteResponse
 
 data class TaskWithSolutionsDto(
     val task: TaskLiteDto,
-    val solutions: List<AttemptByTaskDto>
+    val solutions: List<AttemptByTaskDto>,
 ) {
-    fun toResponse() = TasksApiResponses.GetTaskLiteApiResponse.GetTaskLite200ApiResponse(
-        content = TaskLiteResponse(
-            id = task.id,
-            name = task.name,
-            level = Level.fromValue(task.level.name.lowercase()),
-            description = task.description,
-            languages = task.languages.map { it.name.lowercase() },
-            startCodes = task.startCode.mapKeys { (k, v) -> k.name.lowercase() },
-            isPrivate = task.isPrivate,
-            isEnabled = task.isEnabled,
-            solutions = solutions.toResponse()
-        )
+    fun toResponse() = TaskLiteResponse(
+        id = task.id,
+        name = task.name,
+        level = Level.fromValue(task.level.name.lowercase()),
+        description = task.description,
+        languages = task.languages.map { it.name.lowercase() },
+        startCodes = task.startCode.mapKeys { (k, v) -> k.name.lowercase() },
+        isPrivate = task.isPrivate,
+        isEnabled = task.isEnabled,
+        solutions = solutions.toResponse()
     )
+
 }
 
 private fun List<AttemptByTaskDto>.toResponse(): List<SolutionLiteResponse> {
-   return this.map {
+    return this.map {
         SolutionLiteResponse(
             id = it.id,
             status = it.status.api,
