# codest-api/src/main/resources/openapi/server/codest-api-openapi.yaml
@@ -38,14 +38,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TasksListResponse'        
+                $ref: '#/components/schemas/TasksListResponse'
         400:
           $ref: '#/components/responses/Error'
         422:
           $ref: '#/components/responses/Error'
         500:
           $ref: '#/components/responses/Error'
-  /v1/tasks/{taskId}:
+  /v1/tasks/{taskId}/full:
     get:
       tags:
         - tasks
@@ -61,30 +61,53 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FullTaskResponse'        
+                $ref: '#/components/schemas/FullTaskResponse'
         400:
           $ref: '#/components/responses/Error'
         422:
           $ref: '#/components/responses/Error'
         500:
           $ref: '#/components/responses/Error'
-          
-  /v1/tasks/{taskId}/lite:
+
+  /v1/tasks/{taskId}:
     get:
       tags:
         - tasks
       summary: Короткое описание задачи с решениями пользователя
-      operationId: getTaskLite
+      operationId: getTaskWithSolutions
+      security:
+        - bearerAuth: [ ]
       parameters:
         - $ref: '#/components/parameters/TaskIdPath'
-        - $ref: '#/components/parameters/UserIdOptional'
       responses:
         200:
           description: Ok
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TaskLiteResponse'        
+                $ref: '#/components/schemas/TaskLiteResponse'
+        400:
+          $ref: '#/components/responses/Error'
+        422:
+          $ref: '#/components/responses/Error'
+        500:
+          $ref: '#/components/responses/Error'
+
+  /v1/tasks/{taskId}/lite:
+    get:
+      tags:
+        - tasks
+      summary: Короткое описание задачи без решений пользователя
+      operationId: getTaskLite
+      parameters:
+        - $ref: '#/components/parameters/TaskIdPath'
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskLiteResponse'
         400:
           $ref: '#/components/responses/Error'
         422:
@@ -99,7 +122,7 @@ paths:
       summary: Создание задачи
       operationId: createTask
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       requestBody:
         required: true
         content:
@@ -126,7 +149,7 @@ paths:
       summary: Возвращает решение
       description: Возвращает решение
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       tags:
         - solution
       parameters:
@@ -151,7 +174,7 @@ paths:
       summary: Сохраняет решение
       description: Сохраняет решение
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       tags:
         - solution
       parameters:
@@ -345,7 +368,7 @@ components:
           $ref: '#/components/schemas/TaskId'
         name:
           $ref: '#/components/schemas/TaskName'
-        level: 
+        level:
           $ref: '#/components/schemas/Level'
         description:
           description: Описание
@@ -364,7 +387,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/SolutionLiteResponse'
-          default: []
+          default: [ ]
 
 
     FullTaskResponse:
@@ -388,7 +411,7 @@ components:
           $ref: '#/components/schemas/TaskId'
         name:
           $ref: '#/components/schemas/TaskName'
-        level: 
+        level:
           $ref: '#/components/schemas/Level'
         description:
           description: Описание
@@ -412,57 +435,57 @@ components:
           $ref: '#/components/schemas/TaskDrivers'
         startCodes:
           $ref: '#/components/schemas/TaskStartCodes'
-          
+
     TaskStartCodes:
       description: Заготовки кода для пользователя. язык -> драйвер
       type: string
       additionalProperties:
         type: string
-      example: {'java' : 'someCode'}
-      
+      example: { 'java': 'someCode' }
+
     TaskDrivers:
       description: Заготовки кода для выполнения. язык -> драйвер
       type: string
       additionalProperties:
         type: string
-      example: {'java' : 'someCode'}
-      
+      example: { 'java': 'someCode' }
+
     TaskInputTypes:
       description: Типы входных параметров
       type: array
-      items: 
+      items:
         type: string
-      example: ['integer', 'boolean', 'int_array']
+      example: [ 'integer', 'boolean', 'int_array' ]
     
     TaskOutputType:
       description: Тип выходного параметра
       type: string
       example: 'integer'
-      
+
     TaskLanguages:
       description: Допустимые языки
       type: array
       items:
         $ref: '#/components/schemas/Language'
-      
+
     Language:
       description: Допустимый язык
       type: string
       example: 'java'
-      
+
     MethodName:
       description: Название реализуемого метода(функции)
       type: string
       example: 'sum'
-      
+
     IsEnabled:
       description: Отображается ли задача в списке (есть доступ по id)
       type: boolean
-      
+
     IsPrivate:
       description: Отображается ли задача только в соревновании (есть доступ по id)
       type: boolean
-      
+
     TaskTests:
       type: array
       items:
@@ -479,7 +502,7 @@ components:
           $ref: '#/components/schemas/TestInputData'
         outputData:
           $ref: '#/components/schemas/TestOutputData'
-      
+
     Test:
       description: Тест
       type: object
@@ -494,25 +517,25 @@ components:
           $ref: '#/components/schemas/TestInputData'
         outputData:
           $ref: '#/components/schemas/TestOutputData'
-  
+
     TestId:
       description: Уникальный идентификатор теста
       type: string
       format: uuid
       example: 803f29aa-cca4-4fe7-8254-e0005106cdc3
-      
+
     TestInputData:
       description: Входные данные теста
       type: array
-      items: 
+      items:
         type: string
-      example: ['2', '0', '1']
-      
+      example: [ '2', '0', '1' ]
+
     TestOutputData:
       description: Выходные данные теста
       type: string
       example: '3'
-  
+
     TasksListResponse:
       description: Список задач с пагинацией
       type: object
@@ -530,11 +553,11 @@ components:
           description: Всего страниц
           type: integer
           format: int64
-          example: 123 
+          example: 123
         items:
           type: array
           items:
-            $ref: '#/components/schemas/TaskLite'        
+            $ref: '#/components/schemas/TaskLite'
     
     TaskLite:
       description: Короткое описание задачи
@@ -550,23 +573,23 @@ components:
           $ref: '#/components/schemas/TaskName'
         level:
           $ref: '#/components/schemas/Level'
-          
+
     TaskId:
       description: Уникальный идентификатор задачи
       type: string
       format: uuid
       example: 803f29aa-cca4-4fe7-8254-e0005106cdc3
-      
+
     TaskName:
       description: Имя задачи
       type: string
-      example: '1. Сложение'  
+      example: '1. Сложение'
     
     Level:
       description: Уровень сложности
       type: string
-      enum: ['easy', 'medium', 'hard']
- 
+      enum: [ 'easy', 'medium', 'hard' ]
+
     ErrorResponse:
       description: Данные об ошибке
       type: object
@@ -628,7 +651,7 @@ components:
       in: query
       schema:
         $ref: '#/components/schemas/Language'
-  
+
     Level:
       description: Уровень сложности
       required: false
@@ -667,7 +690,7 @@ components:
         minimum: 1
         maximum: 100
         default: 10
-      example: 20   
+      example: 20
   
   headers:
     XTraceId:
